# vet

./: __init__.py  __main__.py  animais_storage.json  pyproject.toml  requirements.txt  utils.py
animals/: __init__.py  dog.py  monkey.py
services/: base.py  clean.py  doctor.py  payment.py
