[tool.poetry]
name = "veterinaria"
version = "0.0.1"
description = "Study case"
authors = ["jrnp97 <jrnp1997@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
yaspin = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
